--- a/Reflectie/ass1/report.tex
+++ b/Reflectie/ass1/report.tex
@@ -11,4 +11,10 @@
 Abe Wiersma(10433120)\\
 \today
 \section*{Adriaan van Wijngaarden (1916-1987)}
+Adriaan van Wijngaarden wordt geboren op 2 november 1916 in Rotterdam, een tijd waarin computers geen deel uitmaken van de Nederlandse samenleving. Hij rondde in 1939 zijn opleiding in werktuigbouwkunde af aan de TU delft en begon daarna aan zijn doctoraat in thermodynamica maar stopte hier mee. Na de tweede wereldoorlog sloot hij zich aan bij het Nationaal Lucht- en Ruimtevaartlaboratorium. Met deze organisatie ging hij naar Engeland om kennis te maken met de in de oorlog verworven technieken. In Engeland verwierf hij een nieuwe interesse in computers en werd 2 jaar later het hoofd van de computer afdeling van het net opgerichte Mathematisch centrum in Amsterdam. In de jaren die volgen zet hij zich in voor de techniek en constructie van de eerste Nederlandse computer. In 1952 is het resultaat daar: De ARRA. De ARRA is de eerste in Nederland gebouwde computer en genereerde voor de opening op 21 juni 1952 een lijst met willekeurige getallen. Na het genereren van deze lijst gaf ARRA I de geest. Onder het motto van een verbouwing werd begonnen aan ARRA II, dit zodat de donaties aan ARRA I door bleven gaan voor ARRA II. Een jaar later in december 1953 was ARRA II af, een compleet nieuwe machine.\\
+Voor de software van ARRA (I \& II) huurde van Wijngaarden in 1952 Edsger Dijkstra in, de wiskundige en informaticus die 6 jaar later het kortste pad algoritme zou publiceren.\\
+Van Wijngaarden stond ook aan het hoofd van de werkgroep die de programmeertaal Algol-68 bedachten.
+Algol-68 was de beoogde opvolger van Algol-60 met als doel om een algemeen bruikbare programmeertaal te zijn die tegelijk veelzijdig en netjes opgezet en gespecificeerd moest zijn.\\
+Voor zijn werk in de informatica en wiskunde ontving hij in 1986 de IEEE Computer Pioneer Award, een prijs om het harde werk en de visie van pioniers te erkennen.\\
+Een leuk feitje ter afsluiting: Het apenstaartje stond, lang voordat het werd gebruikt in emailadressen, bekend als het 'aadje', het was zijn ex libris in de informatica.
 \end{document}
