--- a/K&S/lab1/report.tex
+++ b/K&S/lab1/report.tex
@@ -1,10 +1,19 @@
 \documentclass[pdftex,12pt,a4paper]{article}
 
-\usepackage{wrapfig,amssymb,amsmath,graphicx, subfigure}
+\usepackage{wrapfig, amssymb, amsmath, graphicx, subfigure, tikz, tikz-qtree}
 \usepackage[dutch]{babel}
 \usepackage[top=0.5in, bottom=0.5in, left=1in, right=1in]{geometry}
 \pagenumbering{arabic}
 \newcommand{\HRule}{\rule{\linewidth}{0.5mm}}
+
+\usetikzlibrary{calc}
+\newcommand{\hcancel}[5]{%
+    \tikz[baseline=(tocancel.base)]{
+        \node[inner sep=0pt,outer sep=0pt] (tocancel) {#1};
+        \draw[red] ($(tocancel.south west)+(#2,#3)$) -- ($(tocancel.north east)+(#4,#5)$);
+    }%
+}%
+
 
 \begin{document}
 \input{title.tex}
@@ -20,16 +29,23 @@
             		$$U=\{1,2,3,4,5,6\}$$
             	Dit is ook te zien als:
             		$$U=\{2,3,4,5,6,7,8,9,10,11,12\}$$
-            	Waarbij de getallen de optelling van het aantal ogen van de twee worpen is.
+            	Waarbij de getallen de optelling van het aantal ogen van de twee
+                worpen is.
             \item
-            	De kans om tweemaal 6 te gooien is tweemaal $1/6 \rightarrow 1/36$
+            	De kans om tweemaal 6 te gooien is tweemaal
+                $1/6 \rightarrow 1/36$
             \item
-            	De kans om met tweemaal gooien 9 ogen te gooien is 4 keer 1/36, namelijk door 4,5 en 6,3 en omgedraaid.
+            	De kans om met tweemaal gooien 9 ogen te gooien is 4 keer 1/36,
+                namelijk door 4,5 en 6,3 en omgedraaid.
             \item
             	Laat U wederom bestaan uit de getallen 2 t/m 12.
             	Dan is de kans $P(X=i) = \sum_{i=1}^{10}$
             \item
-            	Met 2 dobbelstenen kan even ogen gegooid worden door met allebei de dobbelstenen even te gooien of door allebei met de dobbelstenen oneven te gooien, omdat er 1/2 kans is met iedere dobbelsteen even of oneven te gooien heb je 1/2 kans om even te gooien met 2 dobbelstenen.
+            	Met 2 dobbelstenen kan even ogen gegooid worden door met allebei
+                de dobbelstenen even te gooien of door allebei met de
+                dobbelstenen oneven te gooien, omdat er 1/2 kans is met iedere
+                dobbelsteen even of oneven te gooien heb je 1/2 kans om even te
+                gooien met 2 dobbelstenen.
         \end{enumerate}
 
     \item
@@ -41,6 +57,27 @@
 	\item
     	\begin{enumerate}
     		\item
+                \begin{tikzpicture}[fill=gray]
+                % left hand
+                \scope
+                \clip (-2,-2) rectangle (2,2)
+                      (1,0) circle (1);
+                \fill (0,0) circle (1);
+                \endscope
+                % right hand
+                \scope
+                \clip (-2,-2) rectangle (2,2)
+                      (0,0) circle (1);
+                \fill (1,0) circle (1);
+                \endscope
+                % outline
+                \draw (0,0) circle (1) (0,1)  node [text=black,above] {$A$}
+                      (1,0) circle (1) (1,1)  node [text=black,above] {$B$}
+                      (-2,-2) rectangle (3,2) node [text=black,above] {$U$};
+                \end{tikzpicture}
+
+                Het is goed te zien dat de kans op A en B in U de kans op A plus
+                de kans op B is min de overlappende regio.
     			$$P(A \vee B) = P(A) + P(B) - P(A \wedge B)$$
     			$$P(A \vee B) = P(A) + P(B) - (P(A) + P(B) - P(A \vee B))$$
     			$$P(A \vee B) = P(A \vee B)$$
@@ -50,12 +87,95 @@
     			$$P(U) = 1$$
 
     		\item
+                $$P(A) = P(A \wedge B) + P(A \wedge \neg B)$$
+                $$P(A) = P(A \wedge (B \vee \neg B))$$
+                $$P(A) = P(A \wedge U)$$
+                $$P(A) = P(A)$$
+
+            \item
+                $$P(A) = \sum\limits_{i=1}^{n} P(A \wedge B_{i})$$
+                $$P(A) = P(A \wedge \sum\limits_{i=1}^{n} B_{i})$$
+                $$P(A) = P(A \wedge U)$$
+                $$P(A) = P(A)$$
 
     	\end{enumerate}
     \item
-    	4
-    \item 
-    	5
+    	$$P(A|B) = \frac{P(A)}{P(B)} P(B|A)$$
+        $$\frac{P(A \wedge B)}{P(B)} = \frac{P(A)}{P(B)} P(B|A)$$
+        $$\frac{P(A \wedge B)}{P(B)} = \frac{P(A)}{P(B)} \frac{P(B \wedge A)}{P(A)}$$
+        $$\frac{P(A \wedge B)}{P(B)} = \frac{P(A) * P(B \wedge A)}{P(A) * P(B)}$$
+        $$\frac{P(A \wedge B)}{P(B)} = \frac{\hcancel{P(A)}{0pt}{0pt}{0pt}{0pt} * P(B \wedge A)}{\hcancel{P(A)}{0pt}{0pt}{0pt}{0pt} * P(B)}$$
+        $$\frac{P(A \wedge B)}{P(B)} = \frac{P(A \wedge B)}{P(B)}$$
+    \item
+        \begin{enumerate}
+            \item
+    	       \begin{tikzpicture}[fill=gray]
+                % left hand
+                \scope
+                \clip (-2,-2) rectangle (2,2)
+                      (1,0) circle (1);
+                \fill (0,0) circle (1);
+                \endscope
+                % right hand
+                \scope
+                \clip (-2,-2) rectangle (2,2)
+                      (0,0) circle (1);
+                \fill (1,0) circle (1);
+                \endscope
+                % outline
+                \draw (0,0) circle (1) (0,1)  node [text=black,above] {$A$}
+                      (1,0) circle (1) (1,1)  node [text=black,above] {$B$}
+                      (-2,-2) rectangle (3,2) node [text=black,above] {$U$};
+                \end{tikzpicture}
+
+            \item
+                Het is goed te zien dat als aan B voldaan is dat de doorsnede
+                van A en B de resterende invloed van A is in het nieuwe
+                universum U = B. Omdat universum U nu B is moet er
+                genormaliseerd worden naar B dus wordt er door de kans op
+                B gedeeld.
+        \end{enumerate}
+    \item
+        \begin{enumerate}
+            \item
+                $$P(A_{n-1}|A_n) = \frac{P(A_{n-1}A_n)}{P(A_n)}$$
+                $$P(A_{n-1}A_n) = P(A_{n-1}|A_n)P(A_n) = X$$
+                $$P(A_{n-2}|X) = \frac{P(A_{n-2}X)}{P(X)}$$
+                $$P(A_{n-2}X) = P(A_{n-2}|X)P(X)$$
+                $$P(A_n A_{n-1} A_{n-2}) = P(A_{n-2}|A_{n-1}A_n)P(A_{n-1}|A_n)P(A_n)$$
+                $$herhaal$$
+            \item
+                De volgorde maakt niet uit.
+        \end{enumerate}
+
+    \item
+        \begin{enumerate}
+        \item
+            \Tree[.U [.{vaas1 1/3} [[.{wit 5/6} \textit{5/18} ]
+                                    [.{rood 1/6} \textit{1/18} ]]]
+                    [.{vaas2 1/3} [[.{wit 2/3} \textit{2/9} ]
+                           [.{rood 1/3} \textit{1/9} ]]]
+                    [.{vaas3 1/3} [[.{wit 1/2} \textit{1/6} ]
+                           [.{rood 1/2} \textit{1/6} ]]]
+            ]
+
+            $P(K=wit) = 5/18 + 2/9 + 1/6 = 12/18 = 2/3$
+        \item
+            Bayes regel
+        \end{enumerate}
+    \item
+        \begin{enumerate}
+            \item
+                $P(A \vee \neg B) \neq P(A)P(\neg B)$ tenzij $A = B$
+            \item
+                $P(\neg A \vee B) \neq P(\neg A)P(B)$ tenzij $A = B$
+            \item
+                $P(\neg A \vee \neg B) \neq P(\neg A)P(\neg B)$ tenzij $A \wedge B \neq 0$ en $A \vee B = U$
+        \end{enumerate}        
+    \item
+        \Tree[.U [.{rood 1/3} [[.{vaas1 1/6} \textit{1/18} ][.{vaas2 1/3} \textit{1/9} ][.{vaas3 1/2} \textit{1/6} ]]]
+                 [.{wit 2/3} [[.{vaas1 5/12} \textit{5/18} ][.{vaas2 1/3} \textit{2/9} ][.{vaas3 1/4} \textit{1/6} ]]]
+             ]
 \end{enumerate}
 
 \end{document}
