--- a/K&S/lab1/report.tex
+++ b/K&S/lab1/report.tex
@@ -161,7 +161,7 @@
 
             $P(K=wit) = 5/18 + 2/9 + 1/6 = 12/18 = 2/3$
         \item
-            Bayes regel
+            $$P(A|B) = \frac{P(A \wedge B)}{P(B)}$$
         \end{enumerate}
     \item
         \begin{enumerate}
