--- a/Reflectie/RDC-W3/report.tex
+++ b/Reflectie/RDC-W3/report.tex
@@ -9,7 +9,7 @@
 \begin{document}
 \input{title.tex}
 \bibliographystyle{plain}
-\section{Geschiedenis}
+\section{Context}
 De opkomst van geosociale dating-apps vindt zijn oorsprong in Grindr, de homo dating-app die werd uitgebracht in maart 2009. Er waren snel veel positieve reviews en na twee jaar, op de 'verjaardag' van de app, waren er een totaal van 1.7 miljoen gebruikers in 190 landen. Met het succes van Grindr in het achterhoofd werd een half jaar later in september 2011 de nieuwe app Blendr gelanceerd. Joel Simkhai begon met Blendr nadat hij overwelmt werd door hetero-vrouwen die 'jaloers' waren op hun homo-vrienden die Grindr hadden. Toch is er volgens hem een groot verschil tussen Blendr en Grindr, dit omdat Blendr meer gericht zou zijn op vriendschap en minder op sex.
 \\
 
@@ -37,8 +37,11 @@ Waar Grindr heel open is over het aantal gebruikers wereldwijd, blijven die gege
 
 Toch kon Tinder mij vertellen dat ze al 1.5 Miljard matches hadden gemaakt, waarbij een match een positieve rating van 2 gebruikers aan elkaar is. Vanaf dit moment kan men in contact met elkaar komen. 
 
+Te concluderen valt is dat  een substantiële grootte van de samenleving zich bezig houdt met de online date ervaring.
+
 \section{Invloed op samenleving}
-Mogelijk een emailinterview met de maker van threender, over afwegingen die hij maakt.
+Ik wil ter illustratie van mijn punt wil ik graag het tindergebruik van een goede vriend van mij uit de doeken doen. Hij heeft Tinder al zo'n anderhalfjaar en verteld trots dat hij al een enorme hoeveelheid matches heeft, meer dan 300. Hoewel hij dus blijkbaar gewild is heeft hij nog nooit een date gehad met één van zijn matches. In die tijd heeft hij buiten het 'virtuele' wel dates gehad en zonder mediatie van een dating-app. Mijn conclusie hieruit is dat de dating-app in dit geval niet echt gebruikt word om contact te vinden met gelijkgestemden maar ter verrijking van zijn ego. Het behalen van een groot aantal matches zal misschien een leuk feitje zijn om laten zien hoe gewild je bent op het internet, maar meer dan dat zal het niet zijn.\\
+Toch vermoeilijkt hij voor zichzelf zijn contact met potentiële dates wanneer hij in plaats van socializen zijn telefoon opzoekt waar zoals blijkt slechts date-gespreksstof te halen valt en geen dates.
 \section{Conclusie}
 Pro's
 Contra's
